styles.css
@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap");

* {
  max-width: 100%;
  text-align: center;
}
a {
  text-decoration: none;
  color: #22a7a7f3;
}

.about-pars {
  background-color: #22a7a76b;
  background-color: #22a7a76b;
  padding: 0 1rem;
  margin: 0 1rem 1rem;
}

.story-card {
  background-color: rgba(0, 0, 0, 0.822);
}

.story-desc {
  color: white;
}
.story-img {
  border-radius: 50%;
}
hr {
  width: 15%;
  border: dotted #5adcdcbd 6px;
  border-bottom: none;
  margin: 50px auto;
}
/* SECTION COLORS */
#hero {
  background-color: rgba(0, 0, 0, 0.89);
}

#portfolio {
  background-color: rgba(0, 0, 0, 0.89);
  color: white;
}

footer {
  background-color: #22a7a7f3;
  padding: 1rem;
  margin-top: 100px;
}

#footer-text {
  color: white;
  padding: 0;
  margin: 0;
  font-size: 14px;
}

h1 {
  font-family: "Josefin Sans", sans-serif;
  color: whitesmoke;
  padding-bottom: 3vh;
}

.line {
  width: 10em;
  margin: 0 auto;
  border-right: 2px solid rgba(255, 255, 255, 0.75);
  font-size: 180%;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  transform: translateY(-50%);
}
#subhead {
  font-family: monospace;
  color: #d1d1d1bd;
}

/*  Animation */
.anim-typewriter {
  animation: typewriter 4s steps(40) 1s 1 normal both,
    blinkTextCursor 1000ms steps(40) infinite normal;
}

@keyframes typewriter {
  from {
    width: 0;
  }
  to {
    width: 11.5em;
  }
}
@keyframes blinkTextCursor {
  from {
    border-right-color: rgba(255, 255, 255, 0.75);
  }
  to {
    border-right-color: transparent;
  }
}
/* BASE */
@media (min-width: 0px) {
  #introduction {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
  }
  #hero {
    height: 100vh;
  }
  h1 {
    font-size: 2rem;
  }
  h2 {
    font-size: 1.5rem;
  }
  h3 {
    padding: 1rem;
    margin: 2rem auto 0;
  }
  img {
    width: 100px;
  }
  #main-img {
    width: 200px;
  }
  #smiley-me {
    margin: 35px 0 0;
  }

  p {
    font-size: 10px;
  }
  .fab {
    padding: 1rem;
    font-size: 25px;
    transition: 0.3s ease;
  }
  .fab:hover {
    transform: scale(1.5);
    -webkit-transform: scale(1.5);
    -ms-transform: scale(1.5);
    color: white;
  }
  .line {
    font-size: 130%;
  }
  .lang-logo {
    width: 50px;
  }
  button {
    min-width: 60%;
    margin: 2rem;
  }
  #about-body {
    text-align: left;
  }
  #technologies {
    text-align: left;
    font-size: 15px;
    margin: 0 0 1rem;
  }

  #lang-outer-box {
    background-color: rgba(255, 255, 255, 0.42);
    padding: 1rem;
    margin: 1rem 1rem 3rem;
    border-radius: 5px;
    box-shadow: 0px 0px 10px #22a7a786;
  }
  #lang-outer-box img {
    max-width: 40px;
    margin: 0 1rem 0.5rem;
  }

  /************ PROJECTS ***********/
  .grid-container {
    display: grid;
    grid-template-columns: 50% 50%;
    padding: 5px;
  }

  #project-image {
    width: 350px;
    height: 250px;
    margin: 1rem;
    padding: 0;
    object-fit: cover;
  }
  .proj-desc {
    width: 80%;
    margin: 0 auto 2rem;
    font-size: 14px;
  }

  /************ BLOG ***********/

  .story-card {
    padding: 1rem;
    margin: 1rem 0;
    box-shadow: 2px 2px 5px grey;
  }

  /************ form ***********/
  #form-text {
    font-size: 15px;
    width: 80%;
    margin: auto;
  }
  form {
    max-width: 80%;
    margin: auto;
  }
  input {
    width: 100%;
    font-size: 12px;
    margin-bottom: 1.5rem;
    padding: 0.5rem;
  }
  textarea {
    width: 100%;
  }
  #status {
    background-color: red;
    border-radius: 3px;
    min-width: 30%;
    max-width: 50%;
    margin: 0 auto;
  }

  #status.success {
    background-color: rgba(156, 245, 22, 0.678);
    padding: 0.5rem;
    animation: status 4s ease forwards;
  }
  #status.error {
    background-color: rgba(206, 24, 24, 0.753);
    color: white;
    padding: 0.5rem;
    animation: status 4s ease forwards;
  }
  @keyframes status {
    0% {
      opacity: 1;
      pointer-events: all;
    }
    90% {
      opacity: 1;
      pointer-events: all;
    }
    100% {
      opacity: 0;
      pointer-events: none;
    }
  }
}

/* iPhone 5/SE */
@media (min-width: 319px) {
  h1 {
    font-size: 2.5rem;
  }
  h2 {
    font-size: 1.5rem;
  }
  #main-img {
    width: 300px;
  }
  p {
    font-size: 12px;
  }
  .about-pars {
    background-color: #22a7a76b;
    padding: 0 1rem 1rem;
    margin: 0 1rem 1rem;
  }
  .story-img {
    padding: 5px;
    margin: 1rem;
  }
  #technologies {
    text-align: left;
    font-size: 15px;
    margin: 0 0 1rem;
  }
  #lang-outer-box {
    background-color: rgba(255, 255, 255, 0.42);
    padding: 1rem;
    margin: 1rem;
  }
  #lang-outer-box img {
    max-width: 40px;
    margin: 0 1rem 0.5rem;
  }

  /************ PROJECTS ***********/
  .grid-container {
    display: grid;
    grid-template-columns: auto;
    padding: 10px;
  }
  .project-image {
    min-width: 200px;
    margin: 1rem;
  }
}

/* iPhone Plus  */
@media (min-width: 400px) {
  .story-card {
    padding: 1rem;
    margin: 2rem 1rem;
    box-shadow: 2px 2px 5px grey;
  }
  #introduction {
    width: 80%;
  }
  p {
    font-size: 14px;
  }
  h1 {
    font-size: 3rem;
  }
  img {
    width: 140px;
  }
  .about-pars {
    background-color: #22a7a76b;
    padding: 0 1rem 1rem;
    margin: 0 1rem 1rem;
  }
  .line {
    font-size: 180%;
  }
}

/* iPad tablet */
@media (min-width: 700px) {
  h1 {
    font-family: "Josefin Sans", sans-serif;
    color: whitesmoke;
    font-size: 4rem;
  }
  h2 {
    font-family: monospace;
    color: #d1d1d1bd;
    font-size: 2rem;
  }
  .fab {
    padding: 1.5rem;
    font-size: 30px;
  }
  h3 {
    padding: 1.5rem 1rem 1.5rem;
  }
  img {
    width: 150px;
  }
  p {
    font-size: 16px;
  }
  hr {
    width: 10%;
    border: dotted #5adcdcbd 10px;
    border-bottom: none;
    margin: 50px auto;
  }
  #technologies {
    text-align: left;
    font-size: 15px;
    margin: 0 0 1rem;
  }

  #lang-outer-box {
    background-color: rgba(255, 255, 255, 0.42);
    padding: 1rem;
    width: 70%;
    margin: 1rem auto 3rem;
  }
  #lang-outer-box img {
    max-width: 35px;
    margin: 0 1rem 0.5rem;
  }
  /************ PROJECTS ***********/
  .grid-container {
    display: grid;
    grid-template-columns: auto auto;
    margin: 0 50px;
  }
  .grid-container > div {
    text-align: center;
    padding: 20px 0;
    margin: 10px 15px;
  }
  .proj-desc {
    font-size: 17px;
  }
  /************ BLOG ***********/

  #written-intro {
    width: 80%;
    margin: auto;
  }
  .story-card {
    display: flex;
  }
  .story-img {
    width: 130px;
    height: 130px;
    align-self: flex-start;
    margin: 0;
    padding: 0.5rem;
  }
  #blog-preview {
    margin: 0;
    padding: 0;
  }

  /************ form ***********/
  #form-text {
    font-size: 20px;
    width: 80%;
    margin: auto;
  }
  form {
    max-width: 80%;
    margin: auto;
  }
  input {
    width: 100%;
    font-size: 16px;
    margin-bottom: 1.5rem;
    padding: 0.5rem;
  }
  textarea {
    width: 100%;
    text-align: left;
    padding: 0.5rem;
  }
}

@media (min-width: 1000px) {
  h1 {
    font-size: 6rem;
  }

  .fab {
    padding: 2rem;
    font-size: 45px;
  }
  .about-pars {
    background-color: #22a7a76b;
    padding: 0 2rem 2rem;
    width: 65%;
    margin: auto;
  }
  h3 {
    padding: 2rem 1rem 2rem;
    font-size: 3rem;
  }

  img {
    width: 200px;
  }

  #smiley-me {
    width: 200px;
    height: 200px;
    z-index: 5;
  }
  p {
    font-size: 18px;
  }
  hr {
    width: 6%;
    border: dotted #5adcdcbd 10px;
    border-bottom: none;
    margin: 50px auto;
  }

  #portfolio {
    padding-top: 0.5rem;
  }

  #lang-outer-box {
    max-width: 50%;
    margin: 2rem auto;
  }

  #lang-outer-box img {
    max-width: 50px;
    margin: 0 1rem 0.5rem;
  }
  /************ PROJECTS ***********/
  .grid-container {
    display: grid;
    grid-template-columns: auto auto;
    margin: 0 15%;
  }
  .grid-container > div {
    text-align: center;
    padding: 15px 0;
    margin: 10px 15px;
  }
  .proj-name {
    font-size: 2rem;
    padding: 1rem 0;
  }
  .proj-desc {
    font-size: 17px;
  }
  #project-image {
    width: 400px;
    margin: 1.5rem;
  }
  /************ BLOG ***********/

  #written-intro {
    width: 90%;
    margin-bottom: 80px;
  }
  .story-card {
    display: flex;
    max-width: 80%;
    margin: 1rem auto 1rem;
    box-shadow: 2px 2px 7px grey;
  }
  .story-img {
    width: 130px;
    height: 130px;
    margin: 0.5rem;
    padding: 0.5rem;
  }
  .story-desc {
    text-align: left;
    font-size: 16px;
  }
  h5 {
    text-align: left;
    font-size: 1.5rem;
  }
  #blog-preview {
    width: 80%;
    text-align: left;
  }

  /************ form ***********/
  #form-text {
    font-size: 20px;
    width: 70%;
    margin: auto;
  }
  form {
    padding-top: 3rem;
    max-width: 40%;
    margin: auto;
  }
  input {
    width: 100%;
    font-size: 16px;
    margin-bottom: 1.5rem;
    padding: 0.5rem;
  }
  textarea {
    width: 100%;
    text-align: left;
    padding: 0.5rem;
  }
  button {
    width: 100%;
    margin: 2rem auto;
    padding: 0.2rem;
    font-size: 20px;
  }
}

